--- a/angular-web-app/src/app/components/_admin/sidenav/sidenav.component.html
+++ b/angular-web-app/src/app/components/_admin/sidenav/sidenav.component.html
@@ -3,7 +3,7 @@
   <!-- Header -->
   <div class="d-flex flex-row navlist-header-container">
     <div class="d-flex align-items-center justify-content-center h-100 navlist-header-icon">
-      <img src="../../../../assets/img/spavento-logo.png" alt="Spavento logo">
+      <img src="https://firebasestorage.googleapis.com/v0/b/spavento-paintings.appspot.com/o/files%2Fspavento-logo.png?alt=media&token=41650cbb-9a3e-43be-bcc1-46a3c3ab432e" alt="Spavento logo">
     </div>
     <div class="d-flex align-items-center navlist-header-text">
       <span class="font-weight-bold">Spavento</span>
