--- a/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-add/painting-add.component.html
@@ -118,8 +118,8 @@
             </mat-form-field>
             <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
               class="form-field col-12 col-md-3">
-              <mat-label>Lengte (cm)</mat-label>
-              <input matInput id="length" placeholder="Lengte" name="length" [(ngModel)]="painting.length"
+              <mat-label>Hoogte (cm)</mat-label>
+              <input matInput id="length" placeholder="Hoogte" name="length" [(ngModel)]="painting.length"
                 [disabled]="formDisabled" #length="ngModel" />
             </mat-form-field>
             <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
