--- a/angular-web-app/src/app/components/carousel-img/carousel-img.component.scss
+++ b/angular-web-app/src/app/components/carousel-img/carousel-img.component.scss
@@ -3,11 +3,12 @@
 .img-wrapper {
   width: 100%;
   height: 60vh;
+  padding: 0 1rem;
 }
 
 .slider-img {
-  height: 100%;
-  max-width: 95%;
+  max-width: 100%;
+  max-height: 100%;
   border-radius: 4px;
 }
 
