updated painting height

--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -24,8 +24,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight" [height]="'min-content'"
-            [elevation]="generalContent.cardElevation">
+          <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight" [elevation]="generalContent.cardElevation">
           </app-painting-card>
         </div>
       </div>
