--- a/angular-web-app/src/app/components/_pages/home/home.component.scss
+++ b/angular-web-app/src/app/components/_pages/home/home.component.scss
@@ -1,11 +1,9 @@
 .featured-item-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
+  padding: 0 1rem;
 }
 
 .featured-item {
-  width: auto;
-  margin-bottom: 16px;
+  max-width: 100%;
+  max-height: 100%;
 }
