--- a/angular-web-app/src/app/components/info-card/info-card.component.scss
+++ b/angular-web-app/src/app/components/info-card/info-card.component.scss
@@ -11,3 +11,13 @@
   height: 28px;
   text-align: center;
 }
+
+.info-card {
+  & .mat-card-title {
+    font-size: 1rem !important;
+  }
+  & .mat-card-subtitle {
+    font-size: 20px !important;
+    margin-bottom: 0px !important;
+  }
+}
