--- a/angular-web-app/src/app/components/painting-card/painting-card.component.scss
+++ b/angular-web-app/src/app/components/painting-card/painting-card.component.scss
@@ -2,12 +2,14 @@
 
 .painting-card {
   margin: 15px;
-  width: calc(100% - 30px);
+  max-height: calc(100% - 30px);
+  max-width: calc(100% - 30px);
   overflow: hidden;
 }
 
 .painting-card-img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
   object-position: 50% 50%;
   object-fit: cover;
   border-radius: 5px;
