--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.scss
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.scss
@@ -3,3 +3,27 @@
     margin-left: 11px;
     padding-left: 28px;
 }
+
+.list-divider {
+    width: calc(100% - 4rem) !important;
+    left: 2rem !important;
+}
+
+
+.expansion-list-panel {
+    white-space: normal !important;
+    margin-top: 1px;
+}
+
+.expansion-list-panel-header {
+    height: 62px !important;
+    padding: 0 !important;
+    background-color: transparent !important;
+    font-size: inherit !important;
+}
+
+.expansion-list-panel-content {
+    display: flex;
+    flex-direction: column;
+    padding-left: 42px;
+}
